--- a/.github/workflows/force-release.yml
+++ b/.github/workflows/force-release.yml
@@ -27,6 +27,7 @@ jobs:
 
 
   hub-integration:
+    if: False
     needs: token-check
     uses: jina-ai/hub-integration/.github/workflows/main.yml@main
     with:
