--- a/.github/workflows/build-old-docs.yml
+++ b/.github/workflows/build-old-docs.yml
@@ -74,7 +74,8 @@ jobs:
           mv ./brand.html ./docs/_templates/sidebar/brand.html
       - name: Install dependencies
         run: |
-          python docs/pin_requirements.py extra-requirements.txt
+          wget https://raw.githubusercontent.com/${{ inputs.repo_owner }}/${{ inputs.package }}/master/docs/pin_requirements.py 
+          python pin_requirements.py extra-requirements.txt
           pip install .[devel]
           cd docs
           pip install -r requirements.txt
