fix: fix pin pyyaml -2

--- a/.github/workflows/build-old-docs.yml
+++ b/.github/workflows/build-old-docs.yml
@@ -77,7 +77,7 @@ jobs:
           wget https://raw.githubusercontent.com/${{ inputs.repo_owner }}/${{ inputs.package }}/master/docs/pin_requirements.py
           wget https://raw.githubusercontent.com/${{ inputs.repo_owner }}/${{ inputs.package }}/master/docs/correct_some_requirements.sh
           python pin_requirements.py extra-requirements.txt
-          ./correct_some_requirements.sh
+          bash correct_some_requirements.sh
           pip install .[devel]
           cd docs
           pip install -r requirements.txt
