--- a/jina/resources/k8s/template/deployment-uses-before.yml
+++ b/jina/resources/k8s/template/deployment-uses-before.yml
@@ -42,6 +42,14 @@ spec:
               fieldPath: metadata.uid
         - name: JINA_DEPLOYMENT_NAME
           value: {jina_deployment_name}
+        - name: K8S_DEPLOYMENT_NAME
+          value: {name}
+        - name: K8S_NAMESPACE_NAME
+          value: {namespace}
+        - name: K8S_POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
 
         readinessProbe:
           tcpSocket:
@@ -65,6 +73,14 @@ spec:
               fieldPath: metadata.uid
         - name: JINA_DEPLOYMENT_NAME
           value: {jina_deployment_name}
+        - name: K8S_DEPLOYMENT_NAME
+          value: {name}
+        - name: K8S_NAMESPACE_NAME
+          value: {namespace}
+        - name: K8S_POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
 
         readinessProbe:
           exec:
